--- a/example.html
+++ b/example.html
@@ -5,6 +5,7 @@
     <script type="text/javascript" src="./StringUtil.js"></script>
     <script type="application/x-javascript">
         var initialViewer = true;
+        var stringUtil = SAF.StringUtil;
         
         var Logger = {};
             Logger.LogToConsole = function (message) {
