--- a/example.html
+++ b/example.html
@@ -15,7 +15,7 @@
         
         function pageLoaded() {
             var viewer = document.getElementById("viewer");
-            viewer.innerHTML = ""
+            viewer.innerHTML = "";
             
             var formatExample = FormatExample();
             WriteToViewer(formatExample);
