restructuring file layout

--- a/examples/example.html
+++ b/examples/example.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <title>String Util Examples</title>
-    <script type="text/javascript" src="./StringUtil.js"></script>
+    <script type="text/javascript" src="../src/StringUtil.js"></script>
     <script type="application/x-javascript">
         var initialViewer = true;
         var stringUtil = SAF.StringUtil;
